# shot11

./: .gitignore  AppxManifest.xml  CMakeLists.txt  Makefile  README.md  _build.bat  build.ps1  package.ps1
src/: app.c  app.h  app_save.c  capture.c  capture.h  capture_bgra.c  capture_internal.h  capture_round.c  capture_shift.c  capture_utils.c  clipboard.c  clipboard.h  magick.c  magick.h  magick_internal.h  main.c  path.c  path.h  png.c  png.h  png_internal.h  png_load.c  png_wic_open.c  png_wic_write.c  render.c  render.h  shadow.c  shadow.h  shadow_alpha.c  shadow_blur_alpha.c  shadow_blur_boxes.c  shadow_blur_h.c  shadow_blur_v.c  shadow_calc.c  shadow_draw.c  shadow_internal.h  tray.c  tray.h  util.c  util.h  (+4 more)
